[project]
name = "ecromedos"
version = "3.0.1"
dependencies = [
  "argcomplete",
  "lxml",
  "mistune",
  "pygments",
  "pygments-style-github",
]

[project.scripts]
ecromedos = "ecromedos.ecromedos:main"

[tool.setuptools_scm]
# write_to = "pkg/_version.py"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
